Resolves: tdf#94701 allow fully deleting illustration category in combobox

Change-Id: Iaaefbe2311e61be3b9689c693481d149aa1355f5
(cherry picked from commit 0261be7f92930952a470bc7f5e1d543b8907b1f0)
(cherry picked from commit 2365ff9f02370d63aae3d5b04b90b3c1a58d1094)
Reviewed-on: https://gerrit.libreoffice.org/20372
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>